# tufup-example-s3

./: .env.example  .gitignore  .rclone.conf.example  LICENSE  README.md  initial_setup.py  pyproject.toml  repo_add_bundle.py  repo_init.py  repo_settings.py  setup.spec  test_update_cycle.py
src/myapp/: load_envs.py  settings.py
